# ckanext-desq

./: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/desq/: blueprint.py  helpers.py  jinja.py  plugin.py  query.py  validators.py
ckanext/desq/assets/: webassets.yml
ckanext/desq/assets/css/: desq.css
ckanext/desq/i18n/: ckanext-desq.pot
ckanext/desq/i18n/fr/LC_MESSAGES/: ckanext-desq.mo  ckanext-desq.po
ckanext/desq/public/webfonts/: .gitignore
ckanext/desq/schemas/: dataset.yaml  organization.yaml
ckanext/desq/templates/: base.html  footer.html  header.html  page.html
ckanext/desq/templates/home/: about.html  layout3.html
ckanext/desq/templates/home/snippets/: about_text.html  promoted.html  stats.html
ckanext/desq/templates/organization/: index.html  read.html  read_base.html
ckanext/desq/templates/organization/snippets/: feeds.html  helper.html  organization_item.html
ckanext/desq/templates/package/: read.html  read_base.html  resource_read.html  search.html
ckanext/desq/templates/package/snippets/: additional_info.html  info.html  package_basic_fields.html  package_metadata_fields.html  resource_item.html  resources_list.html
ckanext/desq/templates/scheming/display_snippets/: desq_contributor_field.html  desq_link_generic.html  (+5 more)
ckanext/desq/templates/snippets/: desq_breadcrumb_base_items.html  facet_list.html  follow_button.html  home_breadcrumb_item.html  language_selector.html  license.html  organization.html  package_item.html  search_form.html  social.html
ckanext/desq/tests/: test_plugin.py
config/ckan/: licenses.json  sample.ini
(+3 files in other folders)
