[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/desq/i18n/ckanext-desq.pot
width = 80

[init_catalog]
domain = ckanext-desq
input_file = ckanext/desq/i18n/ckanext-desq.pot
output_dir = ckanext/desq/i18n

[update_catalog]
domain = ckanext-desq
input_file = ckanext/desq/i18n/ckanext-desq.pot
output_dir = ckanext/desq/i18n
previous = true

[compile_catalog]
domain = ckanext-desq
directory = ckanext/desq/i18n
statistics = true

[options.extras_require]
dev =
    pip-tools
    pycodestyle
    pydocstyle
    rope
    yapf
