[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/desq/i18n/ckanext-desq.pot
width = 80

[init_catalog]
domain = ckanext-desq
input_file = ckanext/desq/i18n/ckanext-desq.pot
output_dir = ckanext/desq/i18n

[update_catalog]
domain = ckanext-desq
input_file = ckanext/desq/i18n/ckanext-desq.pot
output_dir = ckanext/desq/i18n
previous = true

[compile_catalog]
domain = ckanext-desq
directory = ckanext/desq/i18n
statistics = true

[options]
install_requires =
    ckanext-hidegroups @ git+https://github.com/whiskyechobravo/ckanext-hidegroups.git#a95e7b76f36f650829eecc564b55da2eeadd737a
    ckanext-scheming @ git+https://github.com/ckan/ckanext-scheming.git#5b3d66cea054eb895ee9371951049574d2545124
    ckanext-fluent @ git+https://github.com/ckan/ckanext-fluent.git#1ca043066d66c7081a393f8d6091015dfb1d53e1

[options.extras_require]
dev =
    pip-tools
    pycodestyle
    pydocstyle
    rope
    yapf
